# memory-schema

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  memoryschema.toml  pyproject.toml
.claude-plugin/: README.md  plugin.json
.claude-plugin/hooks/: hook-post-write.sh  hooks.json
.claude-plugin/rules/: memory-schema.md  memory-working.md
.claude-plugin/rules-ondemand/: memory-corpus.md  memory-schema.md
.claude/plans/: polymorphic-rolling-mccarthy.md  snazzy-tumbling-spark.md  velvet-purring-fern.md
.claude/rules/: memory-schema.md  memory-working.md
.claude/rules-ondemand/: memory-schema.md
deployments/: fractal.toml  helios.toml
docs/: README.md  harness-manual.md  hierarchy-and-inheritance.md  implementation-guide.md  memory-system-specification.md  parameter-registry.md  plan-agent-inheritance.md  plan-fix-6-inheritance-issues.md  plan-hierarchical-nesting.md  plan-hierarchy-and-inheritance.md  schema-specification.md  schema.md  system-overview.md  technical-reference.md
docs/design/: query-conditioned-weighting.md
docs/eval/: baseline-single-space.json  experiment-m1-field-spaces.json
docs/plans/: phase-0-reconnaissance.md  phase-7-skill-amendments.md  plan-hierarchy-and-inheritance.md
docs/reports/: 2026-06-09-session-report-1.md  2026-06-09-session-report-2.md  2026-06-09-session-report-3.md  2026-06-09-session-report-4.md  2026-06-09-session-report-5.md  2026-06-09-session-report-6.md  2026-06-09-session-report-7.md  2026-06-10-session-report-10.md  2026-06-10-session-report-11.md  2026-06-10-session-report-12.md  2026-06-10-session-report-8.md  2026-06-10-session-report-9.md  2026-06-11-session-report-13.md  2026-06-11-session-report-14.md  2026-06-11-session-report-15.md  2026-06-12-session-report-16.md  2026-06-12-session-report-17.md  2026-06-13-session-report-18.md  2026-06-13-session-report-19.md  2026-06-13-session-report-20.md  2026-06-13-session-report-21.md  2026-06-13-session-report-22.md  2026-06-14-session-report-23.md  2026-06-16-session-report-24.md  2026-06-16-session-report-25.md  2026-06-19-session-report-26.md  2026-06-19-session-report-27.md  2026-06-19-session-report-28.md  2026-06-19-session-report-29.md  2026-06-19-session-report-30.md  2026-06-19-session-report-31.md  2026-06-19-session-report-32.md  2026-06-19-session-report-33.md  2026-06-19-session-report-34.md  2026-06-19-session-report-35.md  2026-06-21-trading-journal-setup-report.md
memory/: .active_chain  MEMORY.md  agent-inheritance-implemented.md  architecture-evaluation.md  architecture-schematic.md  audit.jsonl  authorised-state-design.md  authorised-state-implemented.md  automatic-recall-implemented.md  backend-choice-adr.md  bash-python-quoting-rule.md  centralize-env-vars.md  chain-access-between-entries.md  chain-definition.md  chain-entity-design.md  chain-extraction.md  chain-hook-embedding-investigation.md  chain-implementing-live-chains.md  chain-inventory.md  chain-live-accumulation-design.md  chain-memory-quality-evolution.md  chain-not-formalized.md  chain-of-reasoning-discussion.md  chain-pattern-formalized.md  chain-pattern-verified.md  chain-release-lesson.md  chain-type-attribute-status.md  chain-why-equal-weight-fails.md  complete-schematic.md  confidence-meaning-explained.md  corpus-committed.md  corpus-exploration-status.md  corpus-improvement-results.md  current-state-post-remedial.md  debug-silent-except-pattern.md  deployment-verified.md  description-space-added.md  description-space-committed.md  design-doc-committed.md  development-progress-report.md  (+121 more)
scripts/: docs_sync.py
src/memoryschema/: __init__.py  attribution.py  audit.py  chain_state.py  config.py  consolidation.py  discovery.py  dream_report.py  embedding_input.py  embeddings.py  entity_schema.py  format_v5.py  hierarchy.py  inheritance.py  (+16 more)
tests/: conftest.py  test_ablation.py  test_attribution.py  test_calibrate.py  test_chain_state.py  test_cli_deploy.py  test_cli_doctor.py  test_cli_hook.py  test_cli_index.py  test_cli_lifecycle.py  test_cli_main.py  test_cli_memory.py  test_cli_memschema.py  test_cli_migrate.py  test_cli_neo4j.py  test_cli_plugin.py  test_cli_reflect.py  test_cli_validate.py  test_cli_voyage.py  test_config.py  test_consolidation.py  test_decline.py  test_deploy_staleness.py  test_discovery.py  test_dream_report.py  test_e2e_pipeline.py  test_embedding_input_recency.py  test_embeddings.py  test_eval_weakness_fixes.py  test_field_spaces.py  test_format_v5.py  test_format_v5_fuzz.py  test_get_store_degrade.py  test_hierarchy.py  test_hook_env_allowlist.py  test_hook_unified.py  test_hook_utf8.py  test_hooks_util.py  test_inheritance.py  test_init.py  (+33 more)
(+52 files in other folders)
