[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-schema"
version = "0.1.0"
description = "XML-based memory entity system with JSONL/Neo4j storage, Voyage AI embeddings, and Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["memory", "schema", "claude", "neo4j", "embeddings", "knowledge-graph"]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
embeddings = ["voyageai>=0.3"]
numpy = ["numpy>=1.24"]
all = [
    "neo4j>=5.0",
    "voyageai>=0.3",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
memoryschema = "memoryschema.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memoryschema = ["templates/*", "hooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["memoryschema"]

[tool.coverage.report]
show_missing = true
skip_empty = true
