[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-schema"
version = "0.1.0"
description = "File-first memory entity system (schema v5: YAML frontmatter + markdown) with JSONL/Neo4j storage, Voyage AI embeddings, and Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["memory", "schema", "claude", "neo4j", "embeddings", "knowledge-graph"]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
embeddings = ["voyageai>=0.3"]
numpy = ["numpy>=1.24"]
all = [
    "neo4j>=5.0",
    "voyageai>=0.3",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
]

[project.scripts]
memoryschema = "memoryschema.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memoryschema = ["templates/*", "hooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --timeout converts any accidental live/stalled Neo4j connection from a multi-minute hang into a
# fast, attributable failure (thread method works on Windows where SIGALRM is unavailable).
addopts = "-q -m 'not integration' --timeout=30 --timeout-method=thread"
markers = [
    "integration: requires external services (Neo4j, Voyage) — run with pytest -m integration",
]

[tool.coverage.run]
source = ["memoryschema"]

[tool.coverage.report]
show_missing = true
skip_empty = true
