[build-system]
# >=77: the PEP 639 string-form `license = "MIT"` below is rejected by setuptools
# 64-76 ('project.license must be a table'), so the old floor could not build.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-schema"
version = "0.1.1"
description = "File-first memory entity system (schema v5: YAML frontmatter + markdown) with JSONL/Neo4j storage, Voyage AI embeddings, and Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["memory", "schema", "claude", "neo4j", "embeddings", "knowledge-graph"]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# voyageai caps its own Requires-Python at <3.15; without this marker a strict resolver (Poetry 2.x, uv)
# fails to solve `[embeddings]`/`[all]` against our unbounded requires-python (>=3.11). On a future 3.15 the
# extra installs everything else and embeddings degrade loudly (the lazy-import path) — matching doctrine.
embeddings = ["voyageai>=0.3; python_version < '3.15'"]
numpy = ["numpy>=1.24"]
all = [
    "neo4j>=5.0",
    "voyageai>=0.3; python_version < '3.15'",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
]

[project.scripts]
memoryschema = "memoryschema.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memoryschema = ["templates/*", "hooks/*", "claude_plugin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --timeout converts any accidental live/stalled Neo4j connection from a multi-minute hang into a
# fast, attributable failure (thread method works on Windows where SIGALRM is unavailable).
addopts = "-q -m 'not integration' --timeout=30 --timeout-method=thread"
markers = [
    "integration: requires external services (Neo4j, Voyage) — run with pytest -m integration",
]

[tool.coverage.run]
source = ["memoryschema"]

[tool.coverage.report]
show_missing = true
skip_empty = true
